Problem resolved: No } token in main.css file. Ingredients_box class is visible now.

--- a/Project Game/main.css
+++ b/Project Game/main.css
@@ -195,6 +195,10 @@ body {
     z-index: 9999;
 }
 
+.wrong-action {
+    color: red;
+}
+  
 .ingredients_box {
     background: url(img/notebook.png);
     background-size: cover;
@@ -213,7 +217,7 @@ body {
     font-size: 2.2rem;
 }
 
-.animation {
+.wrong-click-animation {
     animation: shake 0.3s cubic-bezier(.36,.07,.19,.97) both;
 }
 
@@ -301,7 +305,7 @@ body {
 
   }
 
-.wrong-way {
+/* .wrong-way {
     position: absolute;
     top: 0;
     left: 0;
@@ -310,7 +314,7 @@ body {
     z-index: 99999;
     background-color: red;
     transition: all 0.1s;
-}
+} */
 
 .winner {
     position: absolute;
